--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # Ignore Python Virtual Environment
 .venv
+
+# Ignore PyTest Directories
+.pytest_cache
+markdowncreator/__pycache__
+test/__pycache__
